# remote-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  can_dev.service  chat.html  create_client.md  create_server.md  dagger.json  example_commans_events.json  lint.sh  protocol.jsonc  req  unisim_cpp.service
Qt/: CMakeLists.txt  IterableEnum.hpp  better_radiobutton.cpp  can_transceive.cpp  can_transceive.ui  helpers.cpp  helpers.h  led.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkerror.cpp  sim-can_debugger.cpp  sim-can_debugger.h  sim-can_debugger.ui  sim-test.cpp  sim-test.h  sim-test.ui  simulator_base.cpp  simulator_base.h  simulatorbase.cpp  simulatorbase.h  web_socket_wrapper.cpp  web_socket_wrapper.h
Qt/simulators/: sim-can_debugger.cpp  sim-can_debugger.h  sim-can_debugger.ui  sim-test.cpp  sim-test.h  sim-test.ui
UI/: CMakeLists.txt  UI.hpp  UI_button.cpp  UI_button.hpp  UI_checkbox.cpp  UI_combobox.cpp  UI_combobox.hpp  UI_dial.cpp  UI_dial.hpp  UI_item.cpp  UI_item.hpp  UI_led.cpp  UI_led.hpp  UI_plot.cpp  UI_plot.hpp  UI_slider.cpp  UI_slider.hpp  UI_table.cpp  UI_table.hpp  UI_textbox.cpp  UI_textbox.hpp  UI_thermo.cpp  UI_thermo.hpp  UI_x_boxes.hpp  ui.hpp  ui_button.cpp  ui_button.hpp  ui_can.cpp  ui_can.hpp  ui_checkbox.cpp  ui_checkbox.hpp  ui_combobox.cpp  ui_combobox.hpp  ui_dial.cpp  ui_dial.hpp  ui_double_spinbox.cpp  ui_double_spinbox.hpp  ui_hex_spinbox.cpp  ui_hex_spinbox.hpp  ui_item.cpp  (+25 more)
UI/custom/: UI_can.cpp  UI_can.hpp  ui_can.cpp  ui_can.hpp
client/: CMakeLists.txt  IterableEnum.hpp  better_radiobutton.cpp  better_radiobutton.h  better_radiobutton.hpp  can_transceive.cpp  can_transceive.h  can_transceive.hpp  can_transceive.ui  factory.hpp  helpers.cpp  helpers.h  helpers.hpp  hex_spinbox.cpp  hex_spinbox.h  led.cpp  led.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  networkerror.cpp  networkerror.h  networkerror.hpp  networkerror.ui  plot_wrapper.cpp  plot_wrapper.hpp  simulator_base.cpp  simulator_base.h  simulator_base.hpp  ui_base.cpp  ui_base.hpp  web_socket_wrapper.cpp  web_socket_wrapper.h  web_socket_wrapper.hpp
client/simulators/: can_debugger.cpp  can_debugger.hpp  can_debugger.ui  sim-can_debugger.cpp  sim-can_debugger.h  sim-test.cpp  sim-test.h  test.cpp  test.hpp  test.ui
client/ui/: better_radiobutton.cpp  better_radiobutton.hpp  can_transceive.cpp  can_transceive.hpp  can_transceive.ui  hex_spinbox.cpp  hex_spinbox.hpp  led.cpp  led.hpp  plot_wrapper.hpp
dagger/: main.go
dockerfile-clang-format/: Dockefile
dockerfile-qt-build/: Dockerfile
server/: CMakeLists.txt  main.cpp  message_parser.cpp  simulator_base.cpp  simulator_base.hpp  simulators.cpp  simulators.hpp  websocket.cpp  websocket.hpp
server/CAN/: CAN_interface.cpp  CAN_interface.hpp
server/VISA/: tcp_client.cpp  tcp_client.hpp  visa.cpp  visa.hpp
server/extensions/: CAN_interface.hpp  gpio.cpp  visa.cpp  visa.hpp
server/extensions/CAN/: CAN_interface.cpp
server/gpio/: gpio.cpp  gpio.hpp
server/simulators/: can_debugger.cpp  can_debugger.hpp  test.cpp  test.hpp  test_sim.cpp  test_sim.hpp
src/: CMakeLists.txt
src/CAN/: CAN_interface.cpp  CAN_interface.hpp  CMakeLists.txt
src/UI/: CMakeLists.txt  UI.hpp  UI_button.cpp  UI_button.hpp  UI_checkbox.cpp  UI_checkbox.hpp  UI_combobox.cpp  UI_combobox.hpp  UI_dial.cpp  UI_dial.hpp  UI_item.cpp  UI_item.hpp  UI_label.cpp  UI_label.hpp  UI_led.cpp  UI_led.hpp  UI_slider.cpp  UI_slider.hpp  UI_textbox.cpp  UI_textbox.hpp  UI_thermo.cpp  UI_thermo.hpp  UI_x_boxes.cpp  UI_x_boxes.hpp
src/UI/custom/: UI_can.cpp  UI_can.hpp
tests/: CMakeLists.txt  Test.hpp  UI_button.cpp  UI_can.cpp  UI_checkbox.cpp  UI_combobox.cpp  UI_dial.cpp  UI_double_spinbox.cpp  UI_hex_spinbox.cpp  UI_item.cpp  UI_label.cpp  UI_led.cpp  UI_plot.cpp  UI_slider.cpp  UI_spinbox.cpp  UI_stacked_widget.cpp  UI_status_bar.cpp  UI_tab_widget.cpp  UI_table.cpp  UI_textbox.cpp  UI_thermo.cpp
tools/: CMakeLists.txt  main.cpp  message_parser.cpp  message_parser.hpp  simulator_base.cpp  simulator_base.hpp  simulators.cpp  simulators.hpp  websocket.cpp  websocket.hpp
tools/CAN/: CAN_interface.cpp  CAN_interface.hpp
tools/simulators/: can_debugger.cpp  can_debugger.hpp  test_sim.cpp  test_sim.hpp
